# telemetry-aggregator

./: .gitignore  CMakeLists.txt  Formats.mkd  LICENSE  README.md
cmake/: FindLibLZMA.cmake  cpp11.cmake  externals.cmake
dashboard/: CMakeLists.txt  aggregator.py  analysis.py  auxiliary.py  mergeresults.py  processor  results2disk.py  s3get.py  s3put.py  updateresults.py
scripts/: README.md  SETUP.sh  cronic  cronic-email.py  filter.json  run-aggregator.sh  run-histograms-server.sh  start-analysis-tasks.sh  start-investigation.sh  update-telemetry.mozilla.org.sh
src/: Aggregator.cpp  CMakeLists.txt  CompressedFileReader.cpp  CompressedFileReader.h  MergeResult.cpp  processor
src/cache/: Aggregate.cpp  Aggregate.h  ChannelVersion.cpp  ChannelVersion.h  InternedString.cpp  InternedString.h  MeasureFile.cpp  MeasureFile.h  PathNode.h  ResultSet.cpp  ResultSet.h
stringencoders/: README
tests/: CMakeLists.txt
tests/aggregator/: CMakeLists.txt  aggregator-corrupted-test.sh  aggregator-leak-test.sh  aggregator-test.sh  corrupted-input.txt  corrupted.lzma  simple-aggregator-test.sh  simple-input.txt  ss-ff-n-22-simple.lzma  test-simple.py
tests/decompress/: CMakeLists.txt  CompressedFileReaderTest.cpp  LargeCompressedFileReaderTest.cpp  a-b-c-def-g.txt  a-b-c-def-g.txt.lzma  a-b-c-def-g.txt.xz  aaa-bbb-ccc-ddd-eee.txt  aaa-bbb-ccc-ddd-eee.txt.lzma  aaa-bbb-ccc-ddd-eee.txt.xz
tests/leak-tests/: CMakeLists.txt  merge-leak-test.sh
tests/merge-test/: CMakeLists.txt  result-1.txt  result-2.txt  sorted-input.sh  unsorted-results.txt  with-options.sh  with-pipes.sh
tests/merge-to-folder/: CMakeLists.txt  merge-to-folder-leak-test.sh  merge-to-folder.sh  merge-two-to-folder.sh  result-1.txt  result-2.txt  result.txt
tests/no-prefix-merge/: CMakeLists.txt  no-merging-prefixes.sh  result.txt
utils/: ParseDate.h  getRSS.c  getRSS.h  mkdirp.h
